--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 .home {
-    background-image: url(../img/head3er.png);
+    background-image: url(../img/header.png);
     background-size: cover;
     width: 100%;
     min-height: 90vh;
